release notes benerator 0.7.0
=============================


summary
-------


changes
-------
- moved default values from Descriptor classes to GeneratorFactory


enhancements
------------
- supporting different types of GeneratorFactories
- new annotation @DecimalGranularity
- New Converter class NumberQuantizer
- Added configurable GeneratorFactory to BeneratorContext
- Defined SimpleMethodParamsGenerator as abstract parent class for Generators that create method parameters as Object arrays.
- Defined AsStringGenerator for wrapping an arbitrary Generator and return String representations of products
- CompositeStringGenerator supports uniqueness


bug fixes (Find the bug tracker at http://sourceforge.net/tracker2/?group_id=222964&atid=1057386)
-------------------------------------------------------------------------------------------------
- Bug fix in UniqueCompositeArrayGenerator