@@ -9,6 +9,7 @@ summary
 changes
 -------
 - moved default values from Descriptor classes to GeneratorFactory
+- removed min/maxExlusive:number with min/maxInclusive:boolean
 
 
 enhancements
